--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -1,8 +1,8 @@
-<div class="dropdown">
-    <button class="btn btn-dark btn-profile ms-2 dropdown-toggle" type="button" id="userMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="dropdown position-static">
+    <button class="btn btn-dark btn-profile ms-2 dropdown-toggle" type="button" id="userMenuButton" data-bs-toggle="dropdown" aria-expanded="false" style="z-index: 11000;">
         <i class="bi bi-person-circle"></i>
     </button>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenuButton">
+    <ul class="dropdown-menu dropdown-menu-end position-absolute" aria-labelledby="userMenuButton"  style="z-index: 11000; right: 0; margin-top: 2px;">
         <li class="dropdown-header text-dark">Welcome {{ user.name if user else '' }}</li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item text-dark" href="/user_profile">
