--- a/app/templates/request_creation_product.html
+++ b/app/templates/request_creation_product.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="{{ url_for('static', filename='request_creation_product.css') }}" />
 </head>
-<body>
+<body  class="d-flex flex-column min-vh-100">
   <header class="sticky-top">
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
       <div class="container-fluid px-4">
@@ -31,7 +31,7 @@
       </div>
     </nav>
   </header>
-
+<main class="flex-grow-1">
   <div class="container py-5">
     <div class="card shadow-lg">
       <div class="card-header bg-primary text-white">
@@ -171,7 +171,7 @@
       </div>
     </div>
   </div>
-
+</main>
   <footer class="bg-dark text-light py-4">
     <div class="container">
       <div class="row">
