--- a/app/templates/manage_product.html
+++ b/app/templates/manage_product.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <header class="sticky-top">
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
