--- a/app/templates/seller_request.html
+++ b/app/templates/seller_request.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
   </header>
-<main>
+<main class="flex-grow-1">
   <div class="container py-5">
     <div class="card shadow-lg">
       <div class="card-header bg-primary text-white">
