Update company registration template to replace 'Retailer' option with 'Seller'

--- a/app/templates/company_register.html
+++ b/app/templates/company_register.html
@@ -76,7 +76,7 @@
                                     <option value="manufacturer">Manufacturer</option>
                                     <option value="transporter">Transporter</option>
                                     <option value="processor">Processor</option>
-                                    <option value="retailer">Retailer</option>
+                                    <option value="seller">Seller</option>
                                 </select>
                                 <div class="invalid-feedback">Please select an industry</div>
                             </div>
