--- a/app/templates/product_of_seller.html
+++ b/app/templates/product_of_seller.html
@@ -61,7 +61,7 @@
                     <div class="card h-100 product-card d-flex align-items-center justify-content-center text-center" data-bs-toggle="modal" data-bs-target="#product{{ product['serial_ids'][0] }}Modal">
                         <div class="card-body d-flex flex-column align-items-center justify-content-center">
                             <h5 class="card-title fs-4 fw-bold text-center text-uppercase" style="color: #2c3e50;">{{ product['product_name'] }}</h5>
-                            <p class="card-text text-truncate">{{ product['product_description'] }}</p>
+                            <p class="card-text text-truncate">{{ product['product_description'][:50] }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 {% if product['product_quantity']  > 0%}
                                 <span class="stock-indicator high px-2 py-1 rounded" style="background-color: green; color: white; font-weight: bold;">
